//! gRPC Service Implementation for Trading Gateway

use std::sync::Arc;
use tonic::{Request, Response, Status};
use tracing::{debug, error, info, warn};

use crate::TradingGateway;
use shrivenquant_proto::trading::v1::{
    trading_gateway_server::TradingGateway as TradingGatewayService,
    StartTradingRequest, StartTradingResponse,
    StopTradingRequest, StopTradingResponse,
    GetStatusRequest, GetStatusResponse,
    EmergencyStopRequest, EmergencyStopResponse,
    UpdateStrategyRequest, UpdateStrategyResponse,
    GetPositionsRequest, GetPositionsResponse,
    Position, GatewayStatus, ComponentHealth,
};

/// gRPC service implementation
pub struct TradingGatewayServiceImpl {
    gateway: Arc<TradingGateway>,
}

impl TradingGatewayServiceImpl {
    /// Create new service implementation
    pub fn new(gateway: Arc<TradingGateway>) -> Self {
        Self { gateway }
    }
}

#[tonic::async_trait]
impl TradingGatewayService for TradingGatewayServiceImpl {
    /// Start trading
    async fn start_trading(
        &self,
        request: Request<StartTradingRequest>,
    ) -> Result<Response<StartTradingResponse>, Status> {
        let req = request.into_inner();
        info!("Starting trading for symbols: {:?}", req.symbols);
        
        // Initialize strategies for requested symbols
        for symbol in &req.symbols {
            // Set position limits if provided
            if let Some(limit) = req.position_limits.get(symbol) {
                self.gateway.risk_gate.set_position_limit(
                    common::Symbol(symbol.parse().unwrap_or(0)),
                    crate::risk_gate::PositionLimit {
                        max_long: common::Qty::from_i64(limit.max_long),
                        max_short: common::Qty::from_i64(limit.max_short),
                        max_order_size: common::Qty::from_i64(limit.max_order_size),
                        max_notional: limit.max_notional,
                    },
                );
            }
        }
        
        // Start trading
        if let Err(e) = self.gateway.start().await {
            error!("Failed to start trading: {}", e);
            return Err(Status::internal(format!("Failed to start trading: {}", e)));
        }
        
        Ok(Response::new(StartTradingResponse {
            success: true,
            message: format!("Trading started for {} symbols", req.symbols.len()),
        }))
    }
    
    /// Stop trading
    async fn stop_trading(
        &self,
        request: Request<StopTradingRequest>,
    ) -> Result<Response<StopTradingResponse>, Status> {
        let req = request.into_inner();
        info!("Stopping trading - close positions: {}", req.close_positions);
        
        // Cancel all orders
        if let Err(e) = self.gateway.execution_engine.cancel_all_orders().await {
            warn!("Failed to cancel orders: {}", e);
        }
        
        // Close positions if requested
        if req.close_positions {
            if let Err(e) = self.gateway.position_manager.close_all_positions().await {
                error!("Failed to close positions: {}", e);
                return Err(Status::internal(format!("Failed to close positions: {}", e)));
            }
        }
        
        Ok(Response::new(StopTradingResponse {
            success: true,
            message: "Trading stopped".to_string(),
            orders_cancelled: self.gateway.execution_engine.get_active_orders().len() as i32,
        }))
    }
    
    /// Get gateway status
    async fn get_status(
        &self,
        _request: Request<GetStatusRequest>,
    ) -> Result<Response<GetStatusResponse>, Status> {
        debug!("Getting gateway status");
        
        let status = self.gateway.get_status().await;
        
        // Convert component health
        let component_health = status.component_health
            .into_iter()
            .map(|(name, health)| ComponentHealth {
                name: name.clone(),
                is_healthy: health.is_healthy,
                error_count: health.error_count,
                success_count: health.success_count,
                avg_latency_us: health.avg_latency_us,
            })
            .collect();
        
        // Get risk metrics
        let risk_metrics = self.gateway.risk_gate.get_metrics();
        
        // Get execution metrics
        let exec_metrics = self.gateway.execution_engine.get_metrics();
        
        Ok(Response::new(GetStatusResponse {
            status: Some(GatewayStatus {
                is_running: status.is_running,
                component_health,
                active_strategies: status.active_strategies as i32,
                total_positions: status.total_positions as i32,
                circuit_breaker_tripped: self.gateway.is_circuit_breaker_tripped(),
                orders_checked: risk_metrics.orders_checked,
                orders_rejected: risk_metrics.orders_rejected,
                orders_submitted: exec_metrics.orders_submitted,
                orders_filled: exec_metrics.orders_filled,
                volume_executed: exec_metrics.volume_executed,
            }),
        }))
    }
    
    /// Emergency stop - kill switch
    async fn emergency_stop(
        &self,
        request: Request<EmergencyStopRequest>,
    ) -> Result<Response<EmergencyStopResponse>, Status> {
        let req = request.into_inner();
        error!("ðŸš¨ EMERGENCY STOP REQUESTED: {}", req.reason);
        
        // Execute emergency stop
        if let Err(e) = self.gateway.emergency_stop().await {
            error!("Failed to execute emergency stop: {}", e);
            return Err(Status::internal(format!("Emergency stop failed: {}", e)));
        }
        
        Ok(Response::new(EmergencyStopResponse {
            success: true,
            message: "Emergency stop executed".to_string(),
            orders_cancelled: self.gateway.execution_engine.get_active_orders().len() as i32,
            positions_closed: self.gateway.position_manager.get_position_count().await as i32,
        }))
    }
    
    /// Update strategy parameters
    async fn update_strategy(
        &self,
        request: Request<UpdateStrategyRequest>,
    ) -> Result<Response<UpdateStrategyResponse>, Status> {
        let req = request.into_inner();
        info!("Updating strategy: {}", req.strategy_name);
        
        // Update strategy parameters
        let strategies = self.gateway.strategies.read();
        for strategy in strategies.iter() {
            if strategy.name() == req.strategy_name {
                // Update parameters (would need to implement parameter update method)
                debug!("Updated strategy {} parameters", req.strategy_name);
            }
        }
        
        Ok(Response::new(UpdateStrategyResponse {
            success: true,
            message: format!("Strategy {} updated", req.strategy_name),
        }))
    }
    
    /// Get current positions
    async fn get_positions(
        &self,
        _request: Request<GetPositionsRequest>,
    ) -> Result<Response<GetPositionsResponse>, Status> {
        debug!("Getting current positions");
        
        let positions_map = self.gateway.position_manager.get_all_positions().await;
        
        let positions: Vec<Position> = positions_map
            .into_iter()
            .map(|(symbol, pos)| Position {
                symbol: symbol.to_string(),
                quantity: pos.quantity,
                avg_entry_price: pos.avg_entry_price,
                current_price: pos.current_price,
                unrealized_pnl: pos.unrealized_pnl,
                realized_pnl: pos.realized_pnl,
            })
            .collect();
        
        Ok(Response::new(GetPositionsResponse {
            positions,
            total_unrealized_pnl: positions.iter().map(|p| p.unrealized_pnl).sum(),
            total_realized_pnl: positions.iter().map(|p| p.realized_pnl).sum(),
        }))
    }
}